# diagnovet-challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: extractor.py  main.py
