[project]
name = "diagnovet-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "firebase-admin>=7.1.0",
    "google-cloud-firestore>=2.23.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
